// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionService #multiSignature 1`] = `
SignedTransactionData {
  "bigNumberService": BigNumberService {
    "configRepository": ConfigRepository {},
  },
  "broadcastData": Object {
    "asset": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "assetID": 0,
    "fee": "314000",
    "id": "a218ca9189872bf8bf836f3e1ebfc7770752551ae4fc61b7bb45f87fee89171f",
    "moduleID": 4,
    "nonce": "8",
    "senderPublicKey": "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
    "signatures": Array [
      "300716832537cc8930a8608fbf2e8ccce869411935ed863f721617e3d8a73253e645380758cac47f1a20a115b68146512ac4d89aa1c7a499c34a10c39bc63001",
      "",
      "300716832537cc8930a8608fbf2e8ccce869411935ed863f721617e3d8a73253e645380758cac47f1a20a115b68146512ac4d89aa1c7a499c34a10c39bc63001",
    ],
  },
  "decimals": 8,
  "identifier": "a218ca9189872bf8bf836f3e1ebfc7770752551ae4fc61b7bb45f87fee89171f",
  "signedData": Object {
    "asset": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "assetID": 0,
    "fee": 314000n,
    "id": Object {
      "data": Array [
        162,
        24,
        202,
        145,
        137,
        135,
        43,
        248,
        191,
        131,
        111,
        62,
        30,
        191,
        199,
        119,
        7,
        82,
        85,
        26,
        228,
        252,
        97,
        183,
        187,
        69,
        248,
        127,
        238,
        137,
        23,
        31,
      ],
      "type": "Buffer",
    },
    "moduleID": 4,
    "multiSignature": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "nonce": 8n,
    "senderPublicKey": Object {
      "data": Array [
        172,
        87,
        72,
        150,
        200,
        70,
        181,
        148,
        119,
        169,
        17,
        91,
        149,
        37,
        99,
        147,
        140,
        72,
        208,
        9,
        107,
        132,
        132,
        108,
        11,
        99,
        74,
        98,
        30,
        23,
        116,
        237,
      ],
      "type": "Buffer",
    },
    "signatures": Array [
      Object {
        "data": Array [
          48,
          7,
          22,
          131,
          37,
          55,
          204,
          137,
          48,
          168,
          96,
          143,
          191,
          46,
          140,
          204,
          232,
          105,
          65,
          25,
          53,
          237,
          134,
          63,
          114,
          22,
          23,
          227,
          216,
          167,
          50,
          83,
          230,
          69,
          56,
          7,
          88,
          202,
          196,
          127,
          26,
          32,
          161,
          21,
          182,
          129,
          70,
          81,
          42,
          196,
          216,
          154,
          161,
          199,
          164,
          153,
          195,
          74,
          16,
          195,
          155,
          198,
          48,
          1,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          48,
          7,
          22,
          131,
          37,
          55,
          204,
          137,
          48,
          168,
          96,
          143,
          191,
          46,
          140,
          204,
          232,
          105,
          65,
          25,
          53,
          237,
          134,
          63,
          114,
          22,
          23,
          227,
          216,
          167,
          50,
          83,
          230,
          69,
          56,
          7,
          88,
          202,
          196,
          127,
          26,
          32,
          161,
          21,
          182,
          129,
          70,
          81,
          42,
          196,
          216,
          154,
          161,
          199,
          164,
          153,
          195,
          74,
          16,
          195,
          155,
          198,
          48,
          1,
        ],
        "type": "Buffer",
      },
    ],
  },
}
`;

exports[`TransactionService #multiSignature 2`] = `
SignedTransactionData {
  "bigNumberService": BigNumberService {
    "configRepository": ConfigRepository {},
  },
  "broadcastData": Object {
    "asset": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "assetID": 0,
    "fee": "314000",
    "id": "88647ef68cb91c5796843a571da994edf175876469f51c2a826afa7aa3dc2a34",
    "moduleID": 4,
    "nonce": "8",
    "senderPublicKey": "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
    "signatures": Array [
      "300716832537cc8930a8608fbf2e8ccce869411935ed863f721617e3d8a73253e645380758cac47f1a20a115b68146512ac4d89aa1c7a499c34a10c39bc63001",
      "e0fcd3edb757214bb5b21a34cba6e485b7d23262487b4f980bb30e833fb1c2a972fa425a7223366949389108527fab74bf1ac2a56d8b030b0ea0bbf87214f30b",
      "300716832537cc8930a8608fbf2e8ccce869411935ed863f721617e3d8a73253e645380758cac47f1a20a115b68146512ac4d89aa1c7a499c34a10c39bc63001",
    ],
  },
  "decimals": 8,
  "identifier": "88647ef68cb91c5796843a571da994edf175876469f51c2a826afa7aa3dc2a34",
  "signedData": Object {
    "asset": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "assetID": 0,
    "fee": 314000n,
    "id": Object {
      "data": Array [
        136,
        100,
        126,
        246,
        140,
        185,
        28,
        87,
        150,
        132,
        58,
        87,
        29,
        169,
        148,
        237,
        241,
        117,
        135,
        100,
        105,
        245,
        28,
        42,
        130,
        106,
        250,
        122,
        163,
        220,
        42,
        52,
      ],
      "type": "Buffer",
    },
    "moduleID": 4,
    "multiSignature": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "nonce": 8n,
    "senderPublicKey": Object {
      "data": Array [
        172,
        87,
        72,
        150,
        200,
        70,
        181,
        148,
        119,
        169,
        17,
        91,
        149,
        37,
        99,
        147,
        140,
        72,
        208,
        9,
        107,
        132,
        132,
        108,
        11,
        99,
        74,
        98,
        30,
        23,
        116,
        237,
      ],
      "type": "Buffer",
    },
    "signatures": Array [
      Object {
        "data": Array [
          48,
          7,
          22,
          131,
          37,
          55,
          204,
          137,
          48,
          168,
          96,
          143,
          191,
          46,
          140,
          204,
          232,
          105,
          65,
          25,
          53,
          237,
          134,
          63,
          114,
          22,
          23,
          227,
          216,
          167,
          50,
          83,
          230,
          69,
          56,
          7,
          88,
          202,
          196,
          127,
          26,
          32,
          161,
          21,
          182,
          129,
          70,
          81,
          42,
          196,
          216,
          154,
          161,
          199,
          164,
          153,
          195,
          74,
          16,
          195,
          155,
          198,
          48,
          1,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          224,
          252,
          211,
          237,
          183,
          87,
          33,
          75,
          181,
          178,
          26,
          52,
          203,
          166,
          228,
          133,
          183,
          210,
          50,
          98,
          72,
          123,
          79,
          152,
          11,
          179,
          14,
          131,
          63,
          177,
          194,
          169,
          114,
          250,
          66,
          90,
          114,
          35,
          54,
          105,
          73,
          56,
          145,
          8,
          82,
          127,
          171,
          116,
          191,
          26,
          194,
          165,
          109,
          139,
          3,
          11,
          14,
          160,
          187,
          248,
          114,
          20,
          243,
          11,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          48,
          7,
          22,
          131,
          37,
          55,
          204,
          137,
          48,
          168,
          96,
          143,
          191,
          46,
          140,
          204,
          232,
          105,
          65,
          25,
          53,
          237,
          134,
          63,
          114,
          22,
          23,
          227,
          216,
          167,
          50,
          83,
          230,
          69,
          56,
          7,
          88,
          202,
          196,
          127,
          26,
          32,
          161,
          21,
          182,
          129,
          70,
          81,
          42,
          196,
          216,
          154,
          161,
          199,
          164,
          153,
          195,
          74,
          16,
          195,
          155,
          198,
          48,
          1,
        ],
        "type": "Buffer",
      },
    ],
  },
}
`;

exports[`TransactionService #multiSignature 3`] = `
SignedTransactionData {
  "bigNumberService": BigNumberService {
    "configRepository": ConfigRepository {},
  },
  "broadcastData": Object {
    "asset": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "assetID": 0,
    "fee": "314000",
    "id": "808fe64c94e7e651342cf8102d25626c68024638e038aa298c6074feb23fe34a",
    "moduleID": 4,
    "nonce": "8",
    "senderPublicKey": "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
    "signatures": Array [
      "e8343b8618a2ea6babf9d9ceb1f5fd3aa8c79fd91b771c40ede0f5b49c32096be7eb2e114a4fb90e6f0f02c3a120834e712654fb14dd33c0374347ae4f3fa208",
      "e0fcd3edb757214bb5b21a34cba6e485b7d23262487b4f980bb30e833fb1c2a972fa425a7223366949389108527fab74bf1ac2a56d8b030b0ea0bbf87214f30b",
      "e8343b8618a2ea6babf9d9ceb1f5fd3aa8c79fd91b771c40ede0f5b49c32096be7eb2e114a4fb90e6f0f02c3a120834e712654fb14dd33c0374347ae4f3fa208",
    ],
  },
  "decimals": 8,
  "identifier": "808fe64c94e7e651342cf8102d25626c68024638e038aa298c6074feb23fe34a",
  "signedData": Object {
    "asset": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "assetID": 0,
    "fee": 314000n,
    "id": Object {
      "data": Array [
        128,
        143,
        230,
        76,
        148,
        231,
        230,
        81,
        52,
        44,
        248,
        16,
        45,
        37,
        98,
        108,
        104,
        2,
        70,
        56,
        224,
        56,
        170,
        41,
        140,
        96,
        116,
        254,
        178,
        63,
        227,
        74,
      ],
      "type": "Buffer",
    },
    "moduleID": 4,
    "multiSignature": Object {
      "mandatoryKeys": Array [
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "nonce": 8n,
    "senderPublicKey": Object {
      "data": Array [
        172,
        87,
        72,
        150,
        200,
        70,
        181,
        148,
        119,
        169,
        17,
        91,
        149,
        37,
        99,
        147,
        140,
        72,
        208,
        9,
        107,
        132,
        132,
        108,
        11,
        99,
        74,
        98,
        30,
        23,
        116,
        237,
      ],
      "type": "Buffer",
    },
    "signatures": Array [
      Object {
        "data": Array [
          232,
          52,
          59,
          134,
          24,
          162,
          234,
          107,
          171,
          249,
          217,
          206,
          177,
          245,
          253,
          58,
          168,
          199,
          159,
          217,
          27,
          119,
          28,
          64,
          237,
          224,
          245,
          180,
          156,
          50,
          9,
          107,
          231,
          235,
          46,
          17,
          74,
          79,
          185,
          14,
          111,
          15,
          2,
          195,
          161,
          32,
          131,
          78,
          113,
          38,
          84,
          251,
          20,
          221,
          51,
          192,
          55,
          67,
          71,
          174,
          79,
          63,
          162,
          8,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          224,
          252,
          211,
          237,
          183,
          87,
          33,
          75,
          181,
          178,
          26,
          52,
          203,
          166,
          228,
          133,
          183,
          210,
          50,
          98,
          72,
          123,
          79,
          152,
          11,
          179,
          14,
          131,
          63,
          177,
          194,
          169,
          114,
          250,
          66,
          90,
          114,
          35,
          54,
          105,
          73,
          56,
          145,
          8,
          82,
          127,
          171,
          116,
          191,
          26,
          194,
          165,
          109,
          139,
          3,
          11,
          14,
          160,
          187,
          248,
          114,
          20,
          243,
          11,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          232,
          52,
          59,
          134,
          24,
          162,
          234,
          107,
          171,
          249,
          217,
          206,
          177,
          245,
          253,
          58,
          168,
          199,
          159,
          217,
          27,
          119,
          28,
          64,
          237,
          224,
          245,
          180,
          156,
          50,
          9,
          107,
          231,
          235,
          46,
          17,
          74,
          79,
          185,
          14,
          111,
          15,
          2,
          195,
          161,
          32,
          131,
          78,
          113,
          38,
          84,
          251,
          20,
          221,
          51,
          192,
          55,
          67,
          71,
          174,
          79,
          63,
          162,
          8,
        ],
        "type": "Buffer",
      },
    ],
  },
}
`;
